standardize PPSSPP settings a little better

--- a/Emu/.emu_setup/.config/ppsspp/PSP/SYSTEM/ppsspp-A30.ini
+++ b/Emu/.emu_setup/.config/ppsspp/PSP/SYSTEM/ppsspp-A30.ini
@@ -1,6 +1,6 @@
 ﻿[General]
 FirstRun = False
-RunCount = 41
+RunCount = 1
 Enable Logging = True
 AutoRun = True
 Browse = False
@@ -11,12 +11,12 @@ CheckForNewVersion = False
 Language = en_US
 ForceLagSync2 = False
 DiscordPresence = True
-UISound = True
+UISound = False
 AutoLoadSaveState = 2
 EnableCheats = True
 CwCheatRefreshRate = 77
-CwCheatScrollPosition = 963.288208
-GameListScrollPosition = 1041.666626
+CwCheatScrollPosition = 0.000000
+GameListScrollPosition = 0.000000
 ScreenshotsAsPNG = True
 UseFFV1 = False
 DumpFrames = False
@@ -436,11 +436,11 @@ QuickChat5 = Quick Chat 5
 [SystemParam]
 PSPModel = 1
 PSPFirmwareVersion = 660
-NickName = PPSSPP
+NickName = spruceman
 MacAddress = 08:e6:ee:3f:57:e3
 GameLanguage = 1
-ParamTimeFormat = 1
-ParamDateFormat = 1
+ParamTimeFormat = 0
+ParamDateFormat = 0
 TimeZone = 0
 DayLightSavings = False
 ButtonPreference = 0
