--- a/Emu/.emu_setup/.config/ppsspp/PSP/SYSTEM/ppsspp-Brick.ini
+++ b/Emu/.emu_setup/.config/ppsspp/PSP/SYSTEM/ppsspp-Brick.ini
@@ -1,23 +1,23 @@
 ﻿[General]
 FirstRun = False
-RunCount = 15
+RunCount = 1
 Enable Logging = True
 AutoRun = True
 Browse = False
 IgnoreBadMemAccess = True
-CurrentDirectory = /mnt/SDCARD
+CurrentDirectory = /mnt/SDCARD/Roms/PSP
 ShowDebuggerOnLoad = False
-CheckForNewVersion = True
+CheckForNewVersion = False
 Language = en_US
 ForceLagSync2 = False
 DiscordPresence = True
 UISound = False
-AutoLoadSaveState = 0
+AutoLoadSaveState = 2
 EnableCheats = True
 CwCheatRefreshRate = 77
 CwCheatScrollPosition = 0.000000
 GameListScrollPosition = 0.000000
-ScreenshotsAsPNG = False
+ScreenshotsAsPNG = True
 UseFFV1 = False
 DumpFrames = False
 DumpVideoOutput = False
@@ -25,9 +25,9 @@ DumpAudio = False
 SaveLoadResetsAVdumping = False
 StateSlot = 0
 EnableStateUndo = True
-StateLoadUndoGame = UCUS98653_1.00
-StateUndoLastSaveGame = UCUS98653_1.00
-StateUndoLastSaveSlot = 2
+StateLoadUndoGame = NA
+StateUndoLastSaveGame = NA
+StateUndoLastSaveSlot = -5
 RewindSnapshotInterval = 0
 ShowOnScreenMessage = True
 ShowRegionOnGameIcon = False
@@ -86,7 +86,7 @@ HideSlowWarnings = False
 HideStateWarnings = False
 PreloadFunctions = False
 JitDisableFlags = 0x00000000
-CPUSpeed = 0
+CPUSpeed = 111
 [Graphics]
 EnableCardboardVR = False
 CardboardScreenSize = 50
@@ -105,12 +105,12 @@ SoftwareRendererJit = True
 HardwareTransform = True
 SoftwareSkinning = True
 TextureFiltering = 1
-InternalResolution = 2
+InternalResolution = 1
 AndroidHwScale = 1
 HighQualityDepth = 1
 FrameSkip = 3
 FrameSkipType = 0
-AutoFrameSkip = False
+AutoFrameSkip = True
 StereoRendering = False
 StereoToMonoShader = RedBlue
 FrameRate = 0
@@ -339,7 +339,7 @@ QuickChat5 = Quick Chat 5
 [SystemParam]
 PSPModel = 1
 PSPFirmwareVersion = 660
-NickName = PPSSPP
+NickName = spruceboy
 MacAddress = b4:1a:14:c1:be:a3
 Language = 1
 ParamTimeFormat = 0
@@ -381,7 +381,7 @@ UpgradeMessage =
 UpgradeVersion = 
 DismissedVersion = 
 [Theme]
-ThemeName = Default
+ThemeName = Dark
 [VR]
 VREnable = True
 VREnable6DoF = True
@@ -401,15 +401,25 @@ VRMotionLength = 0.500000
 VRHeadRotationScale = 5.000000
 VRHeadRotationEnabled = False
 VRHeadRotationSmoothing = False
+[Achievements]
+AchievementsEnable = True
+AchievementsChallengeMode = True
+AchievementsEncoreMode = False
+AchievementsUnofficial = False
+AchievementsLogBadMemReads = False
+bAchievementsSaveStateInChallengeMode = False
+AchievementsUserName = 
+AchievementsSoundEffects = True
+AchievementsUnlockAudioFile = 
+AchievementsLeaderboardSubmitAudioFile = 
+AchievementsLeaderboardTrackerPos = 3
+AchievementsLeaderboardStartedOrFailedPos = 3
+AchievementsLeaderboardSubmittedPos = 3
+AchievementsProgressPos = 3
+AchievementsChallengePos = 3
+AchievementsUnlockedPos = 4
 [Recent]
 MaxRecent = 60
-FileName0 = /mnt/SDCARD/Roms/PSP/tekken 5.iso
-FileName1 = /mnt/SDCARD/Roms/PSP/ridge_racer_2.iso
-FileName2 = /mnt/SDCARD/Roms/PSP/PES 2014 - Pro Evolution Soccer.iso
-FileName3 = /mnt/SDCARD/Roms/PSP/God of War - Chains of Olympus (USA).iso
-FileName4 = /mnt/SDCARD/Roms/PSP/Daxter.iso
-FileName5 = /mnt/SDCARD/Roms/PSP/Crisis Core - Final Fantasy VII.iso
-FileName6 = /mnt/SDCARD/Roms/PSP/Initial D.iso
 [Log]
 SYSTEMEnabled = True
 SYSTEMLevel = 2
