--- a/Emu/.emu_setup/.config/ppsspp/PSP/SYSTEM/ppsspp-Flip.ini
+++ b/Emu/.emu_setup/.config/ppsspp/PSP/SYSTEM/ppsspp-Flip.ini
@@ -5,7 +5,7 @@ Enable Logging = True
 AutoRun = True
 Browse = False
 IgnoreBadMemAccess = True
-CurrentDirectory = /mnt/SDCARD
+CurrentDirectory = /mnt/SDCARD/Roms/PSP
 ShowDebuggerOnLoad = False
 CheckForNewVersion = False
 Language = en_US
@@ -15,9 +15,9 @@ UISound = False
 AutoLoadSaveState = 2
 EnableCheats = True
 CwCheatRefreshRate = 77
-CwCheatScrollPosition = 374.666626
+CwCheatScrollPosition = 0.000000
 GameListScrollPosition = 0.000000
-ScreenshotsAsPNG = False
+ScreenshotsAsPNG = True
 UseFFV1 = False
 DumpFrames = False
 DumpVideoOutput = False
@@ -25,9 +25,9 @@ DumpAudio = False
 SaveLoadResetsAVdumping = False
 StateSlot = 0
 EnableStateUndo = True
-StateLoadUndoGame = ULUS10457_1.00
-StateUndoLastSaveGame = ULUS10457_1.00
-StateUndoLastSaveSlot = 0
+StateLoadUndoGame = NA
+StateUndoLastSaveGame = NA
+StateUndoLastSaveSlot = -5
 RewindSnapshotInterval = 0
 ShowOnScreenMessage = True
 ShowRegionOnGameIcon = False
@@ -90,7 +90,7 @@ HideSlowWarnings = False
 HideStateWarnings = False
 PreloadFunctions = False
 JitDisableFlags = 0x00000000
-CPUSpeed = 0
+CPUSpeed = 111
 [Graphics]
 EnableCardboardVR = False
 CardboardScreenSize = 50
@@ -145,11 +145,11 @@ TexDeposterize = True
 TexHardwareScaling = False
 VSync = False
 BloomHack = 0
-SplineBezierQuality = 2
+SplineBezierQuality = 0
 HardwareTessellation = False
 TextureShader = Off
 ShaderChainRequires60FPS = False
-SkipGPUReadbacks = False
+SkipGPUReadbacks = True
 LogFrameDrops = False
 InflightFrames = 3
 RenderDuplicateFrames = False
@@ -450,9 +450,9 @@ QuickChat5 = Quick Chat 5
 [SystemParam]
 PSPModel = 1
 PSPFirmwareVersion = 660
-NickName = PPSSPP
+NickName = sprucewoman
 MacAddress = ac:bd:fa:9e:68:45
-GameLanguage = -1
+GameLanguage = 1
 ParamTimeFormat = 0
 ParamDateFormat = 0
 TimeZone = 0
@@ -492,7 +492,7 @@ UpgradeMessage =
 UpgradeVersion = 
 DismissedVersion = 
 [Theme]
-ThemeName = Default
+ThemeName = Dark
 [VR]
 VREnable = True
 VREnable6DoF = True
@@ -599,5 +599,3 @@ SCEUTILEnabled = True
 SCEUTILLevel = 2
 SCEMISCEnabled = True
 SCEMISCLevel = 2
-[PlayTime]
-ULJS00080 = 37,1501846587279770368
