--- a/Emu/.emu_setup/.config/ppsspp/PSP/SYSTEM/controls-Brick.ini
+++ b/Emu/.emu_setup/.config/ppsspp/PSP/SYSTEM/controls-Brick.ini
@@ -17,7 +17,10 @@ An.Left = 1-38,10-4001
 An.Right = 1-40,10-4000
 Analog limiter = 1-60
 RapidFire = 1-59
-Fast-forward = 10-4010
-SpeedToggle = 1-68
-Pause = 1-111,10-109,10-104
-Rewind = 1-67
+Fast-forward = 10-196:10-4010
+Save State = 10-196:10-192
+Load State = 10-196:10-193
+Previous Slot = 10-196:10-21
+Next Slot = 10-196:10-22
+Screenshot = 10-196:10-190
+Exit App = 10-196:10-189
