Remove "hide" field from all apps; set "hideinsimplemode" field for all apps; delete RTC app since we can now handle this directly in PyUI; first pass at swapping game nursery to new version

--- a/App/Credits/config.json
+++ b/App/Credits/config.json
@@ -3,5 +3,5 @@
     "icon": "led.png",
     "launch": "launch.sh",
     "description": "Jam out with Jim",
-    "hide": true
+    "hideInSimpleMode": false
 }
