--- a/App/PixelReader/config.json
+++ b/App/PixelReader/config.json
@@ -4,5 +4,5 @@
   "launch": "launch.sh",
   "description": "Read Ebooks on your device",
   "devices": ["TRIMUI_BRICK", "TRIMUI_SMART_PRO", "MIYOO_FLIP"],
-  "hide": false
+  "hideInSimpleMode": false
 }
