--- a/App/RandomGame/config.json
+++ b/App/RandomGame/config.json
@@ -3,5 +3,5 @@
   "icon": "random.png",
   "launch": "launch.sh",
   "description": "Launch a random game",
-  "hide": false
+  "hideInSimpleMode": false
 }
