--- a/App/spruceRestore/config.json
+++ b/App/spruceRestore/config.json
@@ -3,5 +3,5 @@
   "icon": "restore.png",
   "launch": "launch.sh",
   "description": "Restore configs & settings from backup",
-  "hide": true
+  "hideInSimpleMode": true
 }
