initial powerbutton_watchdog.sh implementation for trimui devices

--- a/spruce/scripts/platform/A30.cfg
+++ b/spruce/scripts/platform/A30.cfg
@@ -22,6 +22,8 @@ export WPA_SUPPLICANT_FILE="/config/wpa_supplicant.conf"
 
 # Keycodes
 
+export POWER_EVENT="/dev/input/event0"
+
 export B_POWER="1 116"
 
 export B_LEFT="1 105 1"
