--- a/spruce/scripts/platform/Flip.cfg
+++ b/spruce/scripts/platform/Flip.cfg
@@ -26,6 +26,8 @@ export WPA_SUPPLICANT_FILE="/userdata/cfg/wpa_supplicant.conf"
 
 # Keycodes
 
+export POWER_EVENT="/dev/input/event2"
+
 export B_POWER="1 116"
 
 export B_LEFT="3 16 -1"  # negative for left
