--- a/spruce/scripts/platform/SmartPro.cfg
+++ b/spruce/scripts/platform/SmartPro.cfg
@@ -8,7 +8,9 @@ export DISPLAY_WIDTH="1280"
 export DISPLAY_HEIGHT="720"
 export DISPLAY_ROTATION="0"
 export BATTERY="/sys/class/power_supply/axp2202-battery"
-export LED_PATH=""
+export LED_PATH="/tmp"               # not really, but keeps it from pooping on the root
+export DEVICE_BRIGHTNESS_PATH="/tmp/b" # not really, but keeps it from pooping on the root
+
 
 export EVENT_PATH_KEYBOARD="/dev/input/event3"
 export EVENT_PATH_JOYPAD="/dev/input/event4"
@@ -20,6 +22,8 @@ export DEVICE_PYTHON3_PATH=/mnt/SDCARD/spruce/flip/bin/python3
 export WPA_SUPPLICANT_FILE="/etc/wifi/wpa_supplicant.conf"
 
 # Keycodes
+
+export POWER_EVENT="/dev/input/event1"
 
 export B_POWER="1 116"
     
