--- a/spruce/scripts/platform/Brick.cfg
+++ b/spruce/scripts/platform/Brick.cfg
@@ -8,8 +8,8 @@ export DISPLAY_WIDTH="1024"
 export DISPLAY_HEIGHT="768"
 export DISPLAY_ROTATION="0"
 export BATTERY="/sys/class/power_supply/axp2202-battery"
-export LED_PATH=""
-export DEVICE_BRIGHTNESS_PATH=""
+export LED_PATH="/tmp"                  # not really, but keeps it from pooping on the root
+export DEVICE_BRIGHTNESS_PATH="/tmp/b"    # not really, but keeps it from pooping on the root
 
 export HOME="/mnt/SDCARD"
 
@@ -23,6 +23,8 @@ export DEVICE_PYTHON3_PATH=/mnt/SDCARD/spruce/flip/bin/python3
 export WPA_SUPPLICANT_FILE="/etc/wifi/wpa_supplicant.conf"
 
 # Keycodes
+
+export POWER_EVENT="/dev/input/event1"
 
 export B_POWER="1 116"
     
