update emu jsons to exclude unused "background" field

--- a/Emu/-CUSTOM-SYSTEM-/config.json
+++ b/Emu/-CUSTOM-SYSTEM-/config.json
@@ -2,6 +2,7 @@
   "label": "Display Name",
   "icon": "iconname.png",
   "iconsel": "iconname_sel.png",
+  "themecolor": "FFFF00",
   "launch": "../.emu_setup/standard_launch.sh",
   "extlist": "file|ext|ens|ions|sep|arat|ed|by|pipes|with|no|dots",
   "launchlist": [],
