Move Updater folder contents into App/-Updater; no longer viable to keep it modular since the move to multiplatform / PyUI; fresh install heavily recommended for 4.0 in any case

--- a/App/-Updater/config.json
+++ b/App/-Updater/config.json
@@ -1,7 +1,7 @@
 {
   "label": "EZ Updater",
   "icon": "updater.png",
-  "launch": "../../Updater/updater.sh",
+  "launch": "updater.sh",
   "description": "Update file found, install to update to spruce",
   "hideInSimpleMode": true
 }
