set default scaling min freq on a per-device basis

--- a/spruce/scripts/platform/Flip.cfg
+++ b/spruce/scripts/platform/Flip.cfg
@@ -4,10 +4,12 @@
 export SYSTEM_JSON="/mnt/SDCARD/Saves/flip-system.json"
 export SYSTEM_PATH="/mnt/SDCARD/miyoo355"
 
-
 export DISPLAY_WIDTH="640"
 export DISPLAY_HEIGHT="480"
 export DISPLAY_ROTATION="0"
+
+export DEVICE_SMART_FREQ=816000
+
 export BATTERY="/sys/class/power_supply/battery"
 export LED_PATH="/sys/class/leds/work"
 export DEVICE_BRIGHTNESS_PATH="/sys/class/backlight/backlight/brightness"
