--- a/spruce/scripts/platform/A30.cfg
+++ b/spruce/scripts/platform/A30.cfg
@@ -7,6 +7,9 @@ export SYSTEM_PATH="/mnt/SDCARD/miyoo"
 export DISPLAY_WIDTH="640"
 export DISPLAY_HEIGHT="480"
 export DISPLAY_ROTATION="270"
+
+export DEVICE_SMART_FREQ=648000
+
 export BATTERY="/sys/class/power_supply/battery"
 export LED_PATH="/sys/devices/platform/sunxi-led/leds/led1"
 export DEVICE_BRIGHTNESS_PATH="/sys/devices/virtual/disp/disp/attr/lcdbl"
