--- a/spruce/scripts/platform/SmartPro.cfg
+++ b/spruce/scripts/platform/SmartPro.cfg
@@ -7,6 +7,9 @@ export SYSTEM_PATH="/mnt/SDCARD/trimui"
 export DISPLAY_WIDTH="1280"
 export DISPLAY_HEIGHT="720"
 export DISPLAY_ROTATION="0"
+
+export DEVICE_SMART_FREQ=1008000
+
 export BATTERY="/sys/class/power_supply/axp2202-battery"
 export LED_PATH="/tmp"               # not really, but keeps it from pooping on the root
 export DEVICE_BRIGHTNESS_PATH="/tmp/b" # not really, but keeps it from pooping on the root
