--- a/spruce/scripts/platform/SmartProS.cfg
+++ b/spruce/scripts/platform/SmartProS.cfg
@@ -1,5 +1,5 @@
 #!/bin/sh
-# TRIMUI Smart Pro platform specific variables
+# TRIMUI Smart Pro S platform specific variables
 
 export SYSTEM_JSON="/mnt/SDCARD/Saves/smartpros-system.json"
 export SYSTEM_PATH="/mnt/SDCARD/trimui"
@@ -7,6 +7,9 @@ export SYSTEM_PATH="/mnt/SDCARD/trimui"
 export DISPLAY_WIDTH="1280"
 export DISPLAY_HEIGHT="720"
 export DISPLAY_ROTATION="0"
+
+export DEVICE_SMART_FREQ=1008000
+
 export BATTERY="/sys/class/power_supply/axp2202-battery"
 export LED_PATH="/tmp"               # not really, but keeps it from pooping on the root
 export DEVICE_BRIGHTNESS_PATH="/tmp/b" # not really, but keeps it from pooping on the root
