--- a/App/-Updater/config.json
+++ b/App/-Updater/config.json
@@ -1,7 +1,7 @@
 {
   "label": "EZ Updater",
   "icon": "updater.png",
-  "launch": "updater.sh",
+  "launch": "launch.sh",
   "description": "Update file found, install to update to spruce",
   "hideInSimpleMode": true
 }
