Set device list for apps that must be updated each time a new device is added

--- a/App/BootLogo/config.json
+++ b/App/BootLogo/config.json
@@ -3,5 +3,6 @@
   "icon": "bootlogo.png",
   "launch": "launch.sh",
   "description": "Swap the boot logo at start up",
+  "devices": ["MIYOO_A30", "TRIMUI_BRICK", "TRIMUI_SMART_PRO_S", "TRIMUI_SMART_PRO","MIYOO_FLIP"],
   "hideInSimpleMode": true
 }
