Chore: offload BRAND, FW_FILE name, and REQ_MB_TO_UPDATE_FW from firmwareUpdate.sh to named $PLATFORM.cfg files

--- a/spruce/scripts/platform/A30.cfg
+++ b/spruce/scripts/platform/A30.cfg
@@ -1,6 +1,10 @@
 #!/bin/sh
 # Miyoo A30 platform specific variables
 
+export BRAND="Miyoo"
+export FW_FILE="miyoo282_fw.img"
+export REQ_MB_TO_UPDATE_FW=48
+
 export SYSTEM_JSON="/mnt/SDCARD/Saves/a30-system.json"
 export SYSTEM_PATH="/mnt/SDCARD/miyoo"
 
