--- a/spruce/scripts/platform/Brick.cfg
+++ b/spruce/scripts/platform/Brick.cfg
@@ -1,6 +1,10 @@
 #!/bin/sh
 # TRIMUI Brick platform specific variables
 
+export BRAND="TrimUI"
+export FW_FILE="trimui_tg3040.awimg"
+export REQ_MB_TO_UPDATE_FW=1280
+
 export SYSTEM_JSON="/mnt/SDCARD/Saves/brick-system.json"
 export SYSTEM_PATH="/mnt/SDCARD/trimui"
 
