--- a/spruce/scripts/platform/Flip.cfg
+++ b/spruce/scripts/platform/Flip.cfg
@@ -1,6 +1,10 @@
 #!/bin/sh
 # Miyoo Flip platform specific variables
 
+export BRAND="Miyoo"
+export FW_FILE="miyoo355_fw.img"
+export REQ_MB_TO_UPDATE_FW=384
+
 export SYSTEM_JSON="/mnt/SDCARD/Saves/flip-system.json"
 export SYSTEM_PATH="/mnt/SDCARD/miyoo355"
 
