--- a/spruce/scripts/platform/SmartPro.cfg
+++ b/spruce/scripts/platform/SmartPro.cfg
@@ -1,6 +1,10 @@
 #!/bin/sh
 # TRIMUI Smart Pro platform specific variables
 
+export BRAND="TrimUI"
+export FW_FILE="trimui_tg5040.awimg"
+export REQ_MB_TO_UPDATE_FW=1280
+
 export SYSTEM_JSON="/mnt/SDCARD/Saves/smartpro-system.json"
 export SYSTEM_PATH="/mnt/SDCARD/trimui"
 
