--- a/spruce/scripts/platform/SmartProS.cfg
+++ b/spruce/scripts/platform/SmartProS.cfg
@@ -1,6 +1,10 @@
 #!/bin/sh
 # TRIMUI Smart Pro S platform specific variables
 
+export BRAND="TrimUI"
+export FW_FILE="trimui_tg5050.awimg"    # need to verify
+export REQ_MB_TO_UPDATE_FW=1280         # need to verify
+
 export SYSTEM_JSON="/mnt/SDCARD/Saves/smartpros-system.json"
 export SYSTEM_PATH="/mnt/SDCARD/trimui"
 
