rewrite cores_online() to be more flexible/better accommodate cpus with more or less than 4 cores

--- a/spruce/scripts/platform/MIYOO_MINI_FLIP.cfg
+++ b/spruce/scripts/platform/MIYOO_MINI_FLIP.cfg
@@ -11,6 +11,7 @@ export DISPLAY_WIDTH="640"
 export DISPLAY_HEIGHT="480"
 export DISPLAY_ROTATION="0"
 
+export DEVICE_CORES_ONLINE=01
 export DEVICE_SMART_FREQ=648000
 
 export BATTERY="/sys/class/power_supply/battery"
