--- a/spruce/scripts/platform/A30.cfg
+++ b/spruce/scripts/platform/A30.cfg
@@ -12,6 +12,7 @@ export DISPLAY_WIDTH="640"
 export DISPLAY_HEIGHT="480"
 export DISPLAY_ROTATION="270"
 
+export DEVICE_CORES_ONLINE=0123
 export DEVICE_SMART_FREQ=648000
 
 export BATTERY="/sys/class/power_supply/battery"
