--- a/spruce/scripts/platform/Brick.cfg
+++ b/spruce/scripts/platform/Brick.cfg
@@ -12,6 +12,7 @@ export DISPLAY_WIDTH="1024"
 export DISPLAY_HEIGHT="768"
 export DISPLAY_ROTATION="0"
 
+export DEVICE_CORES_ONLINE=0123
 export DEVICE_SMART_FREQ=1008000
 
 export BATTERY="/sys/class/power_supply/axp2202-battery"
