--- a/spruce/scripts/platform/SmartProS.cfg
+++ b/spruce/scripts/platform/SmartProS.cfg
@@ -12,6 +12,7 @@ export DISPLAY_WIDTH="1280"
 export DISPLAY_HEIGHT="720"
 export DISPLAY_ROTATION="0"
 
+export DEVICE_CORES_ONLINE=0456
 export DEVICE_SMART_FREQ=1008000
 
 export BATTERY="/sys/class/power_supply/axp2202-battery"
