Overhaul set_smart() cpu control helper

--- a/spruce/scripts/platform/A30.cfg
+++ b/spruce/scripts/platform/A30.cfg
@@ -14,6 +14,8 @@ export DISPLAY_ROTATION="270"
 
 export DEVICE_CORES_ONLINE=0123
 export DEVICE_SMART_FREQ=648000
+export DEVICE_PERF_FREQ=1344000
+
 
 export BATTERY="/sys/class/power_supply/battery"
 export LED_PATH="/sys/devices/platform/sunxi-led/leds/led1"
