--- a/spruce/scripts/platform/Flip.cfg
+++ b/spruce/scripts/platform/Flip.cfg
@@ -14,6 +14,7 @@ export DISPLAY_ROTATION="0"
 
 export DEVICE_CORES_ONLINE=0123
 export DEVICE_SMART_FREQ=816000
+export DEVICE_PERF_FREQ=1800000
 
 export BATTERY="/sys/class/power_supply/battery"
 export LED_PATH="/sys/class/leds/work"
