--- a/spruce/scripts/platform/SmartProS.cfg
+++ b/spruce/scripts/platform/SmartProS.cfg
@@ -14,6 +14,7 @@ export DISPLAY_ROTATION="0"
 
 export DEVICE_CORES_ONLINE=0456
 export DEVICE_SMART_FREQ=1008000
+export DEVICE_PERF_FREQ=1992000
 
 export BATTERY="/sys/class/power_supply/axp2202-battery"
 export LED_PATH="/tmp"               # not really, but keeps it from pooping on the root
