rewrite set_performance() and set_smart() and add a little more abstraction to cpu setting functions as a whole

--- a/spruce/scripts/platform/A30.cfg
+++ b/spruce/scripts/platform/A30.cfg
@@ -15,6 +15,7 @@ export DISPLAY_ROTATION="270"
 export DEVICE_CORES_ONLINE=0123
 export DEVICE_SMART_FREQ=648000
 export DEVICE_PERF_FREQ=1344000
+export DEVICE_MAX_FREQ=1512000
 
 
 export BATTERY="/sys/class/power_supply/battery"
