--- a/spruce/scripts/platform/MIYOO_MINI_FLIP.cfg
+++ b/spruce/scripts/platform/MIYOO_MINI_FLIP.cfg
@@ -13,7 +13,8 @@ export DISPLAY_ROTATION="0"
 
 export DEVICE_CORES_ONLINE=01
 export DEVICE_SMART_FREQ=648000
-export DEVICE_PERF_FREQ=1600000
+export DEVICE_PERF_FREQ=1344000
+export DEVICE_MAX_FREQ=1600000
 
 export BATTERY="/sys/class/power_supply/battery"
 export LED_PATH="/sys/devices/platform/sunxi-led/leds/led1"
