--- a/spruce/scripts/platform/SmartPro.cfg
+++ b/spruce/scripts/platform/SmartPro.cfg
@@ -15,6 +15,7 @@ export DISPLAY_ROTATION="0"
 export DEVICE_CORES_ONLINE=0123
 export DEVICE_SMART_FREQ=1008000
 export DEVICE_PERF_FREQ=1800000
+export DEVICE_MAX_FREQ=2000000
 
 export BATTERY="/sys/class/power_supply/axp2202-battery"
 export LED_PATH="/tmp"               # not really, but keeps it from pooping on the root
