first pass at displaying volume icon and numbers by default on spruce theme

--- a/Themes/SPRUCE/config.json
+++ b/Themes/SPRUCE/config.json
@@ -45,5 +45,6 @@
     "topBarInitialXOffset": 60,
     "setTopBarTextToGameSelection": true,
     "fullScreenGridGameMenuResizeType": "FIT",
-    "mainMenuTitle": ""
+    "mainMenuTitle": "",
+    "displayVolumeNumbers": true
 }
