--- a/spruce/scripts/platform/Brick.cfg
+++ b/spruce/scripts/platform/Brick.cfg
@@ -20,6 +20,7 @@ export DEVICE_MAX_FREQ=2000000
 export BATTERY="/sys/class/power_supply/axp2202-battery"
 export LED_PATH="/tmp"                  # not really, but keeps it from pooping on the root
 export DEVICE_BRIGHTNESS_PATH="/tmp/b"    # not really, but keeps it from pooping on the root
+export RUMBLE_GPIO="gpio227"
 
 export HOME="/mnt/SDCARD"
 
