--- a/spruce/scripts/platform/Flip.cfg
+++ b/spruce/scripts/platform/Flip.cfg
@@ -20,6 +20,7 @@ export DEVICE_MAX_FREQ=1992000
 export BATTERY="/sys/class/power_supply/battery"
 export LED_PATH="/sys/class/leds/work"
 export DEVICE_BRIGHTNESS_PATH="/sys/class/backlight/backlight/brightness"
+export RUMBLE_GPIO="gpio20"
 
 export HOME="/mnt/SDCARD"
 
