--- a/spruce/scripts/platform/MIYOO_MINI_FLIP.cfg
+++ b/spruce/scripts/platform/MIYOO_MINI_FLIP.cfg
@@ -19,6 +19,7 @@ export DEVICE_MAX_FREQ=1600000
 export BATTERY="/sys/class/power_supply/battery"
 export LED_PATH="/sys/devices/platform/sunxi-led/leds/led1"
 export DEVICE_BRIGHTNESS_PATH="/sys/devices/virtual/disp/disp/attr/lcdbl"
+export RUMBLE_GPIO="unknown"    #todo - add this or mark not applicable
 
 export EVENT_PATH_KEYBOARD="/dev/input/event3"
 export EVENT_PATH_JOYPAD="/dev/input/event4"
