clean up most platform checks in legacy display() function

--- a/spruce/scripts/platform/Brick.cfg
+++ b/spruce/scripts/platform/Brick.cfg
@@ -8,6 +8,7 @@ export REQ_MB_TO_UPDATE_FW=1280
 export SYSTEM_JSON="/mnt/SDCARD/Saves/brick-system.json"
 export SYSTEM_PATH="/mnt/SDCARD/trimui"
 
+export DISPLAY_TEXT_ELF_WIDTH="960"
 export DISPLAY_WIDTH="1024"
 export DISPLAY_HEIGHT="768"
 export DISPLAY_ROTATION="0"
