--- a/spruce/scripts/platform/Flip.cfg
+++ b/spruce/scripts/platform/Flip.cfg
@@ -8,6 +8,7 @@ export REQ_MB_TO_UPDATE_FW=384
 export SYSTEM_JSON="/mnt/SDCARD/Saves/flip-system.json"
 export SYSTEM_PATH="/mnt/SDCARD/miyoo355"
 
+export DISPLAY_TEXT_ELF_WIDTH="600"
 export DISPLAY_WIDTH="640"
 export DISPLAY_HEIGHT="480"
 export DISPLAY_ROTATION="0"
