--- a/spruce/scripts/platform/MIYOO_MINI_FLIP.cfg
+++ b/spruce/scripts/platform/MIYOO_MINI_FLIP.cfg
@@ -6,7 +6,7 @@ export SYSTEM_PATH="/customer/"
 export BRAND="Miyoo"
 export DEVICE_PYTHON3_PATH=/mnt/SDCARD/spruce/miyoomini/bin/python3
 
-
+export DISPLAY_TEXT_ELF_WIDTH="not applicable"
 export DISPLAY_WIDTH="640"
 export DISPLAY_HEIGHT="480"
 export DISPLAY_ROTATION="0"
