--- a/spruce/scripts/platform/A30.cfg
+++ b/spruce/scripts/platform/A30.cfg
@@ -8,6 +8,7 @@ export REQ_MB_TO_UPDATE_FW=48
 export SYSTEM_JSON="/mnt/SDCARD/Saves/a30-system.json"
 export SYSTEM_PATH="/mnt/SDCARD/miyoo"
 
+export DISPLAY_TEXT_ELF_WIDTH="600"
 export DISPLAY_WIDTH="640"
 export DISPLAY_HEIGHT="480"
 export DISPLAY_ROTATION="270"
