--- a/spruce/scripts/platform/SmartProS.cfg
+++ b/spruce/scripts/platform/SmartProS.cfg
@@ -8,6 +8,7 @@ export REQ_MB_TO_UPDATE_FW=1280         # need to verify
 export SYSTEM_JSON="/mnt/SDCARD/Saves/smartpros-system.json"
 export SYSTEM_PATH="/mnt/SDCARD/trimui"
 
+export DISPLAY_TEXT_ELF_WIDTH="1200"
 export DISPLAY_WIDTH="1280"
 export DISPLAY_HEIGHT="720"
 export DISPLAY_ROTATION="0"
