Clean up some platform checks to reflect what they actually represent - mostly brand, aspect ratio, or display rotation

--- a/spruce/scripts/platform/Brick.cfg
+++ b/spruce/scripts/platform/Brick.cfg
@@ -12,6 +12,7 @@ export DISPLAY_TEXT_ELF_WIDTH="960"
 export DISPLAY_WIDTH="1024"
 export DISPLAY_HEIGHT="768"
 export DISPLAY_ROTATION="0"
+export DISPLAY_ASPECT_RATIO="4:3"
 
 export DEVICE_CORES_ONLINE=0123
 export DEVICE_SMART_FREQ=1008000
