--- a/spruce/scripts/platform/SmartProS.cfg
+++ b/spruce/scripts/platform/SmartProS.cfg
@@ -12,6 +12,7 @@ export DISPLAY_TEXT_ELF_WIDTH="1200"
 export DISPLAY_WIDTH="1280"
 export DISPLAY_HEIGHT="720"
 export DISPLAY_ROTATION="0"
+export DISPLAY_ASPECT_RATIO="16:9"
 
 export DEVICE_CORES_ONLINE=4567
 export DEVICE_SMART_FREQ=1008000
