--- a/spruce/scripts/platform/A30.cfg
+++ b/spruce/scripts/platform/A30.cfg
@@ -12,6 +12,7 @@ export DISPLAY_TEXT_ELF_WIDTH="600"
 export DISPLAY_WIDTH="640"
 export DISPLAY_HEIGHT="480"
 export DISPLAY_ROTATION="270"
+export DISPLAY_ASPECT_RATIO="4:3"
 
 export DEVICE_CORES_ONLINE=0123
 export DEVICE_SMART_FREQ=648000
