--- a/spruce/scripts/platform/MIYOO_MINI_FLIP.cfg
+++ b/spruce/scripts/platform/MIYOO_MINI_FLIP.cfg
@@ -10,6 +10,7 @@ export DISPLAY_TEXT_ELF_WIDTH="not applicable"
 export DISPLAY_WIDTH="640"
 export DISPLAY_HEIGHT="480"
 export DISPLAY_ROTATION="0"
+export DISPLAY_ASPECT_RATIO="4:3"
 
 export DEVICE_CORES_ONLINE=01
 export DEVICE_SMART_FREQ=648000
