TSPS: get PPSSPP working

--- a/Emu/.emu_setup/.config/ppsspp/PSP/SYSTEM/ppsspp-SmartProS.ini
+++ b/Emu/.emu_setup/.config/ppsspp/PSP/SYSTEM/ppsspp-SmartProS.ini
@@ -83,6 +83,18 @@ RemoteISOShareType = 0
 LoadPlugins = True
 RunBehindPauseMenu = False
 ShowGPOLEDs = False
+FileLogging = False
+DefaultTab = 0
+DisableHLEFlags = 0
+ForceEnableHLEFlags = 0
+ScreenshotMode = 0
+TouchGliding = False
+CompressSymbols = True
+AskForExitConfirmationAfterSeconds = 60
+DumpFileTypes = 0
+NotificationPos = 4
+UIScaleFactor = 0
+VulkanDisableImplicitLayers = False
 [CPU]
 CPUCore = 1
 SeparateSASThread = True
@@ -93,14 +105,14 @@ HideSlowWarnings = False
 HideStateWarnings = False
 PreloadFunctions = False
 JitDisableFlags = 0x00000000
-CPUSpeed = 111
+CPUSpeed = 0
 [Graphics]
 EnableCardboardVR = False
 CardboardScreenSize = 50
 CardboardXShift = 0
 CardboardYShift = 0
-iShowStatusFlags = 2
-GraphicsBackend = 0 (OPENGL)
+iShowStatusFlags = 6
+GraphicsBackend = 3 (VULKAN)
 FailedGraphicsBackends = 
 DisabledGraphicsBackends = 
 VulkanDevice = 
@@ -115,7 +127,7 @@ TextureFiltering = 1
 InternalResolution = 0
 AndroidHwScale = 1
 HighQualityDepth = 1
-FrameSkip = 3
+FrameSkip = 1
 FrameSkipType = 0
 AutoFrameSkip = True
 StereoRendering = False
@@ -145,17 +157,17 @@ SaveNewTextures = False
 IgnoreTextureFilenames = False
 TexScalingLevel = 1
 TexScalingType = 0
-TexDeposterize = True
+TexDeposterize = False
 TexHardwareScaling = False
 VSyncInterval = False
-BloomHack = 1
-SplineBezierQuality = 1
+BloomHack = 2
+SplineBezierQuality = 0
 HardwareTessellation = True
 TextureShader = Off
 ShaderChainRequires60FPS = False
 SkipGPUReadbacks = True
 LogFrameDrops = False
-InflightFrames = 3
+InflightFrames = 2
 RenderDuplicateFrames = False
 GpuLogProfiler = False
 CameraMirrorHorizontal = False
@@ -163,13 +175,15 @@ AndroidFramerateMode = 1
 DisableRangeCulling = False
 Smart2DTexFiltering = False
 DisplayCropTo16x9 = True
-VSync = True
-GowForce30FPS = True
+VSync = False
 SkipGPUReadbackMode = 1
 MultiThreading = True
 UberShaderVertex = True
 UberShaderFragment = True
 DisplayRefreshRate = 60
+DepthRasterMode = 0
+ReplacementTextureLoadSpeed = 0
+ShaderCache = True
 [Sound]
 Enable = True
 AudioBackend = 0
@@ -182,6 +196,13 @@ AutoAudioDevice = True
 AchievementSoundVolume = 6
 AudioMixWithOthers = True
 AudioRespectSilentMode = False
+AudioBufferSize = 256
+GameVolume = 100
+ReverbRelativeVolume = 100
+AltSpeedRelativeVolume = 100
+AchievementVolume = 75
+UIVolume = 75
+UseOldAtrac = False
 [Control]
 HapticFeedback = False
 ShowTouchCross = True
@@ -456,10 +477,14 @@ QuickChat2 = Quick Chat 2
 QuickChat3 = Quick Chat 3
 QuickChat4 = Quick Chat 4
 QuickChat5 = Quick Chat 5
+PrimaryDNSServer = 67.222.156.250
+InfrastructureUsername = 
+InfrastructureAutoDNS = True
+AllowSpeedControlWhileConnected = False
 [SystemParam]
 PSPModel = 1
 PSPFirmwareVersion = 660
-NickName = sprucegirl
+NickName = spruceperson
 MacAddress = b4:1a:14:c1:be:a3
 Language = 1
 ParamTimeFormat = 0
@@ -527,25 +552,6 @@ VRForce = False
 VRImmersiveMode = True
 VRPassthrough = False
 VRCanvas3DDistance = 3.000000
-[Achievements]
-AchievementsEnable = True
-AchievementsChallengeMode = True
-AchievementsEncoreMode = False
-AchievementsUnofficial = False
-AchievementsLogBadMemReads = False
-bAchievementsSaveStateInChallengeMode = False
-AchievementsUserName = 
-AchievementsSoundEffects = True
-AchievementsUnlockAudioFile = 
-AchievementsLeaderboardSubmitAudioFile = 
-AchievementsLeaderboardTrackerPos = 3
-AchievementsLeaderboardStartedOrFailedPos = 3
-AchievementsLeaderboardSubmittedPos = 3
-AchievementsProgressPos = 3
-AchievementsChallengePos = 3
-AchievementsUnlockedPos = 4
-AchievementsEnableRAIntegration = False
-AchievementsSaveStateInHardcoreMode = False
 [Recent]
 MaxRecent = 60
 [Log]
@@ -609,3 +615,44 @@ SCEUTILEnabled = True
 SCEUTILLevel = 2
 SCEMISCEnabled = True
 SCEMISCLevel = 2
+ACHIEVEMENTSEnabled = True
+ACHIEVEMENTSLevel = 2
+HTTPEnabled = True
+HTTPLevel = 2
+PRINTFEnabled = True
+PRINTFLevel = 2
+MPEGEnabled = True
+MPEGLevel = 2
+ATRACEnabled = True
+ATRACLevel = 2
+TEXREPLACEEnabled = True
+TEXREPLACELevel = 2
+DEBUGGEREnabled = True
+DEBUGGERLevel = 2
+UIEnabled = True
+UILevel = 2
+IAPEnabled = True
+IAPLevel = 2
+SCEREGEnabled = True
+SCEREGLevel = 2
+[Achievements]
+AchievementsEnable = True
+AchievementsEnableRAIntegration = False
+AchievementsChallengeMode = True
+AchievementsEncoreMode = False
+AchievementsUnofficial = False
+AchievementsLogBadMemReads = False
+AchievementsSaveStateInHardcoreMode = False
+AchievementsUserName = 
+AchievementsSoundEffects = True
+AchievementsUnlockAudioFile = 
+AchievementsLeaderboardSubmitAudioFile = 
+AchievementsLeaderboardTrackerPos = 3
+AchievementsLeaderboardStartedOrFailedPos = 3
+AchievementsLeaderboardSubmittedPos = 3
+AchievementsProgressPos = 3
+AchievementsChallengePos = 3
+AchievementsUnlockedPos = 4
+[PlayTime]
+UCUS98653 = 589,2175210974600521
+NPHG00092 = 829,29346237794587
