TSPS: fix vibrate(); enable thermald and osdd to stay alive

--- a/spruce/scripts/platform/SmartProS.cfg
+++ b/spruce/scripts/platform/SmartProS.cfg
@@ -21,8 +21,8 @@ export DEVICE_MAX_FREQ=2160000
 
 export BATTERY="/sys/class/power_supply/axp2202-battery"
 export LED_PATH="/tmp"               # not really, but keeps it from pooping on the root
-export DEVICE_BRIGHTNESS_PATH="/tmp/b" # not really, but keeps it from pooping on the root
-export RUMBLE_GPIO="gpio236"
+export DEVICE_BRIGHTNESS_PATH="/sys/class/backlight/backlight0/brightness"
+export RUMBLE_GPIO="not applicable"
 
 export EVENT_PATH_KEYBOARD="/dev/input/event3"
 export EVENT_PATH_JOYPAD="/dev/input/event4"
