--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,2 +1,3 @@
 # Require approval from admins for changes to the .github folder
-.github/ @XanXic @Sundownersport @ryanmsartor
+.github/ @XanXic @Sundownersport @ryanmsartor @chrisj951
+
