Added ZRAM (Flip only) and swapfile setup to runtime.sh - both are off by default but are user-configurable under System Settings.
Co-authored-by: =?UTF-8?q?Richard=20=C5=A0tef=C3=BAn?= <richard.stefun@icloud.com>

--- a/Saves/spruce/spruce-config.json
+++ b/Saves/spruce/spruce-config.json
@@ -156,6 +156,27 @@
                     "False"
                 ],
                 "selected": "False"
+            },
+            "useZRAM":{
+                "devices": ["MIYOO_FLIP"],
+                "display": "Use ZRAM (experimental)",
+                "description": "reboot to apply",
+                "options": [
+                    "True",
+                    "False"
+                ],
+                "selected": "False"
+            },
+            "swapfileSize":{
+                "display": "Swapfile size (experimental)",
+                "description": "reboot to apply",
+                "options": [
+                    "Off",
+                    "128MB",
+                    "256MB",
+                    "512MB"
+                ],
+                "selected": "Off"
             }
         },
         "Emulator Settings": {
